# AzureCSAAgent

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: azure-csa.agent.md
.github/prompts/: azure-csa.prompt.md
.github/skills/azure-cloud-migrate/: SKILL.md
.github/skills/azure-compliance/: SKILL.md
.github/skills/azure-cost/: SKILL.md
.github/skills/azure-diagnostics/: SKILL.md
.github/skills/azure-enterprise-infra-planner/: SKILL.md
.github/skills/azure-kubernetes/: SKILL.md
.github/skills/azure-quotas/: SKILL.md
.github/skills/azure-rbac/: SKILL.md
.github/skills/azure-reliability/: SKILL.md
.github/skills/azure-resource-lookup/: SKILL.md
.github/skills/azure-resource-visualizer/: SKILL.md
.github/skills/azure-storage/: SKILL.md
.github/skills/azure-validate/: SKILL.md
.github/skills/entra-app-registration/: SKILL.md
.github/skills/finops-assessment/: SKILL.md
.github/skills/landing-zone-assessment/: SKILL.md
.github/skills/network-review/: SKILL.md
.github/skills/well-architected-review/: SKILL.md
csa/: __init__.py  arg_client.py  assessments.py  cli.py  iac.py  progress.py  tokens.py
tests/: test_assessments.py
