[project]
name = "azure-csa-agent"
version = "1.1.0"
description = "Senior Azure CSA agent — advisory-only architecture, governance, networking, security, and FinOps assessments grounded in live Azure data and official Microsoft documentation."
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "azure-identity>=1.17.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-resource>=23.0.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
azure-csa = "csa.cli:app"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["csa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
